WexGit/Wex_DX/force-app/main/default/objects/Truckers_Program_Enrollment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Truckers Program Enrollments</relationshipLabel>
    <relationshipName>Truckers_Program_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>