WexGit/Wex_DX/force-app/main/default/objects/Truckers_Program_Enrollment__c/fields/Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Application Date</label>
    <type>Date</type>
</CustomField>