WexGit/Wex_DX/force-app/main/default/objects/Truckers_Program_Enrollment__c/fields/Denied_Date__c.field-meta.xml
<CustomField>
    <fullName>Denied_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Denied Date</label>
    <type>Date</type>
</CustomField>