WexGit/Wex_DX/force-app/main/default/objects/Truckers_Program_Enrollment__c/fields/Direct_Bill__c.field-meta.xml
<CustomField>
    <fullName>Direct_Bill__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Direct Bill</label>
    <length>10</length>
    <type>Text</type>
</CustomField>