WexGit/Wex_DX/force-app/main/default/objects/Truckers_Program_Enrollment__c/fields/prog_participant_id__c.field-meta.xml
<CustomField>
    <fullName>prog_participant_id__c</fullName>
    <externalId>true</externalId>
    <label>prog_participant_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>