WexGit/Wex_DX/force-app/main/default/objects/Truckers_Program_Enrollment__c/fields/Program_Status__c.field-meta.xml
<CustomField>
    <fullName>Program_Status__c</fullName>
    <label>Program Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application Received</fullName>
            </value>
            <value>
                <fullName>Application Sent to Vendor</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Automatic Enrollment - Manual Approval Required</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Effective</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>