WexGit/Wex_DX/force-app/main/default/objects/Truckers_Program_Enrollment__c/fields/RTS__c.field-meta.xml
<CustomField>
    <fullName>RTS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RTS?</label>
    <type>Date</type>
</CustomField>