WexGit/Wex_DX/force-app/main/default/objects/Truckers_Program_Enrollment__c/fields/Vendor_Comments__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Comments__c</fullName>
    <description>Comments made by the vendor on the program enrollment decisions</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Comments made by the vendor on the program enrollment decisions</inlineHelpText>
    <label>Vendor Comments</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>